--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -10,6 +10,28 @@
     mot_de_passe_domaine: "Roa42300"  # Mot de passe pour l'utilisateur
 
   tasks:
+    - name: Corriger la configuration de Samba dans smb.conf
+      lineinfile:
+        path: /etc/samba/smb.conf
+        regexp: '^security = ADS.*'
+        line: 'security = ADS'
+        state: present
+        backrefs: no
+
+    - name: Ajouter un commentaire séparé pour le mode sécurité
+      lineinfile:
+        path: /etc/samba/smb.conf
+        insertafter: '^security = ADS'
+        line: '# Mode de sécurité : AD pour Active Directory'
+        state: present
+
+    - name: Tester la configuration Samba avec testparm
+      command: testparm
+      register: testparm_output
+      failed_when: "'Error' in testparm_output.stderr"
+
+    - name: Reconfigurer le paquet samba-common-bin
+      command: dpkg --configure -a
 
     - name: Installer les paquets nécessaires
       apt:
