--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -10,6 +10,28 @@
     mot_de_passe_domaine: "Roa42300"  # Mot de passe pour l'utilisateur
 
   tasks:
+    - name: Corriger les plages IDMAP dans smb.conf
+      replace:
+        path: /etc/samba/smb.conf
+        regexp: 'idmap config MYWORKGROUP : range = \d+-\d+'
+        replace: 'idmap config MYWORKGROUP : range = 20001-30000'
+
+    - name: Ajouter idmap config pour le domaine par défaut si absent
+      blockinfile:
+        path: /etc/samba/smb.conf
+        block: |
+          idmap config * : range = 10000-20000
+          idmap config MYWORKGROUP : range = 20001-30000
+        marker: "# {mark} IDMAP Configuration"
+
+    - name: Tester la configuration Samba avec testparm
+      command: testparm
+      register: testparm_output
+      failed_when: "'Error' in testparm_output.stderr"
+
+    - name: Reconfigurer le paquet samba-common-bin
+      command: dpkg --configure -a
+
     - name: Corriger la configuration de Samba dans smb.conf
       lineinfile:
         path: /etc/samba/smb.conf
