--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -4,39 +4,39 @@
   become: true
   tasks:
 
-    - name: Écrire le fichier smb.conf avec la configuration correcte
-      copy:
-        dest: /etc/samba/smb.conf
-        content: |
-          [global]
-             workgroup = MYWORKGROUP
-             security = ADS
-             realm = MON_DOMAINE.LOCAL
-             encrypt passwords = yes
-             log file = /var/log/samba/%m.log
-             log level = 1
+    # - name: Écrire le fichier smb.conf avec la configuration correcte
+    #   copy:
+    #     dest: /etc/samba/smb.conf
+    #     content: |
+    #       [global]
+    #          workgroup = MYWORKGROUP
+    #          security = ADS
+    #          realm = MON_DOMAINE.LOCAL
+    #          encrypt passwords = yes
+    #          log file = /var/log/samba/%m.log
+    #          log level = 1
 
-          # Intégration AD
-             idmap config *:backend = tdb
-             idmap config *:range = 1000-2000
-             idmap config MYWORKGROUP:backend = rid
-             idmap config MYWORKGROUP:range = 2001-3000
-             winbind use default domain = yes
-             winbind offline logon = true
-             winbind enum users = yes
-             winbind enum groups = yes
+    #       # Intégration AD
+    #          idmap config *:backend = tdb
+    #          idmap config *:range = 1000-2000
+    #          idmap config MYWORKGROUP:backend = rid
+    #          idmap config MYWORKGROUP:range = 2001-3000
+    #          winbind use default domain = yes
+    #          winbind offline logon = true
+    #          winbind enum users = yes
+    #          winbind enum groups = yes
 
-          # Partage de fichiers (optionnel)
-          [partage]
-             path = /srv/samba/partage
-             read only = no
-             browsable = yes
+    #       # Partage de fichiers (optionnel)
+    #       [partage]
+    #          path = /srv/samba/partage
+    #          read only = no
+    #          browsable = yes
           
-          # BEGIN IDMAP Configuration
-             idmap config * : range = 10000-20000
-             idmap config MYWORKGROUP : range = 20001-30000
-          # END IDMAP Configuration
-      backup: yes
+    #       # BEGIN IDMAP Configuration
+    #          idmap config * : range = 10000-20000
+    #          idmap config MYWORKGROUP : range = 20001-30000
+    #       # END IDMAP Configuration
+    #   backup: yes
 
     - name: Vérifier la configuration Samba avec testparm
       command: testparm
