--- a/ad_windows/samba/smb.conf
+++ b/ad_windows/samba/smb.conf
@@ -1,23 +1,28 @@
 [global]
-   workgroup = MYWORKGROUP               # Nom du groupe de travail (doit correspondre à celui du domaine)
-   security = ADS                        # Mode de sécurité : AD pour Active Directory
-   realm = MON_DOMAINE.LOCAL             # Domaine complet (FQDN)
-   encrypt passwords = yes
-   log file = /var/log/samba/%m.log
-   log level = 1
+             workgroup = MYWORKGROUP
+             security = ADS
+             realm = MON_DOMAINE.LOCAL
+             encrypt passwords = yes
+             log file = /var/log/samba/%m.log
+             log level = 1
 
-# Intégration AD
-   idmap config *:backend = tdb
-   idmap config *:range = 1000-2000
-   idmap config MYWORKGROUP:backend = rid
-   idmap config MYWORKGROUP:range = 2000-9999
-   winbind use default domain = yes
-   winbind offline logon = true
-   winbind enum users = yes
-   winbind enum groups = yes
+          # Intégration AD
+             idmap config *:backend = tdb
+             idmap config *:range = 1000-2000
+             idmap config MYWORKGROUP:backend = rid
+             idmap config MYWORKGROUP:range = 2001-3000
+             winbind use default domain = yes
+             winbind offline logon = true
+             winbind enum users = yes
+             winbind enum groups = yes
 
-# Partage de fichiers (optionnel)
-[partage]
-   path = /srv/samba/partage
-   read only = no
-   browsable = yes
+          # Partage de fichiers (optionnel)
+          [partage]
+             path = /srv/samba/partage
+             read only = no
+             browsable = yes
+          
+          # BEGIN IDMAP Configuration
+             idmap config * : range = 10000-20000
+             idmap config MYWORKGROUP : range = 20001-30000
+          # END IDMAP Configuration
