--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -46,6 +46,7 @@
 
     - name: Redémarrer Samba pour appliquer les changements
       service:
+        use : service
         name: smbd
         state: restarted
 
