--- a/ad_windows/kerberos/krb5.conf
+++ b/ad_windows/kerberos/krb5.conf
@@ -1,14 +1,17 @@
 [libdefaults]
-    default_realm = MAME.net
+    default_realm = MAME.NET
     dns_lookup_realm = false
     dns_lookup_kdc = true
+    ticket_lifetime = 24h
+    renew_lifetime = 7d
+    forwardable = true
 
 [realms]
-    MON_DOMAINE.LOCAL = {
-        kdc = 192.168.119.41  #adresse IP ou le FQDN de ton contrôleur de domaine
-        admin_server = Administrator.mon_domaine.local
+    MAME.NET = {
+        kdc = 10.8.0.3
+        admin_server = 10.8.0.3
     }
 
 [domain_realm]
-    .mon_domaine.local = MAME.net
-    mon_domaine.local = MAME.net
+    .mame.net = MAME.NET
+    mame.net = MAME.NET
