--- a/ad_windows/docker-compose.yml
+++ b/ad_windows/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./openvpn:/etc/openvpn
       - ./samba:/etc/samba
       - ./kerberos:/etc/krb5.conf
+      - ./ad/resolv.conf:/etc/resolv.conf
     networks:
       shared_net:
         ipv4_address: 192.168.0.3
