--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -145,12 +145,12 @@
     #           .{{ domaine_ad | lower }} = {{ realm_ad }}
     #           {{ domaine_ad | lower }} = {{ realm_ad }}
 
-    - name: Configurer le DNS pour pointer vers le serveur Active Directory
-      lineinfile:
-        path: /etc/resolv.conf
-        line: "nameserver {{ serveur_ad_ip }}"
-        state: present
-        insertafter: EOF
+    # - name: Configurer le DNS pour pointer vers le serveur Active Directory
+    #   lineinfile:
+    #     path: /etc/resolv.conf
+    #     line: "nameserver {{ serveur_ad_ip }}"
+    #     state: present
+    #     insertafter: EOF
 
     - name: Découvrir le domaine Active Directory
       command: "realm discover {{ domaine_ad }}"
