--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -239,6 +239,7 @@
     # Étape 8 : Activer et démarrer OpenVPN
     - name: Activer et démarrer le service OpenVPN
       service:
+        use : service
         name: openvpn
         state: started
         enabled: yes
