--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -278,7 +278,7 @@
         echo "client
         dev tun
         proto udp
-        remote 91.175.31.138 16387
+        remote 91.175.31.138 16387  # Utilise l'IP publique de ta boxe et le port redirigé
         resolv-retry infinite
         nobind
         persist-key
